--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,7 @@ header > h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
+#WordToGuess > * {
+    padding: 5px;
+}
