--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,15 @@ header > h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
+#WordToGuess {
+    padding: 20px;
+}
+
+#GuessesLeft {
+    padding: 20px;
+}
+
+#GuessedLetters {
+    padding: 20px;
+}
